--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@
 
 
             <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
+                <label class="mb-2">Escribe tu nombre</label>
                 <input class="form-control" placeholder="Nombre">
             </div>
 
             <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
+                <label class="mb-2">Escribe tu correo electrónico</label>
                 <input class="form-control" placeholder="Correo electrónico" />
             </div>
 
 
             <div class="form-group">
-                <label class="mb-2">Mensaje</label>
+                <label class="mb-2">Escribe tu mensaje</label>
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
