Cambio en descripción de Mis trabajos

--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Aconcagua</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Este es el texto de Aconcagua.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -137,10 +134,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Torres del paine</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Este es el texto de Torres del Paine.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -152,12 +146,9 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Nevado 3 crucs</h5>
+                        <h5 class="card-title fw-bold">Nevado 3 cruces</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Este es el texto de nevado 3 cruces.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
