--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <a class="nav-link" href="#">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#">Mis trabajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#">Mi contacto</a>
                     </li>
 
                 </ul>
@@ -69,8 +69,7 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Esta es la descripción del Acerca de mi.
         </p>
 
 
