--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Viajes del fin <br> del mundo
+                    Deporte en el fin <br> del mundo
                 </h1>
                 <p class="my-5">
                     Esta es la descripción de lo que yo hago.
